# apple-music-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.py  pyproject.toml
apple/: __init__.py  client.py  errors.py
apple/api/: account.py  catalog.py  library.py  playlist.py
apple/models/: album.py  artist.py  lyrics.py  meta.py  object.py  playlist.py  song.py
applemusic/: __init__.py  client.py  decrypt.py  errors.py
applemusic/api/: __init__.py  account.py  catalog.py  library.py  playback.py  playlist.py
applemusic/models/: __init__.py  album.py  artist.py  lyrics.py  meta.py  object.py  playlist.py  relationships.py  song.py
