[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "applemusic"
version = "0.0.1"
authors = [
  { name="Myp3a", email="murza8965@gmail.com" },
]
description = "Apple Music API wrapper in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Myp3a/apple-music-api"
Issues = "https://github.com/Myp3a/apple-music-api/issues"