[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "applemusic"
version = "0.0.1"
authors = [
  { name="Myp3a", email="murza8965@gmail.com" },
]
description = "Apple Music API wrapper in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "m3u8",
  "requests",
  "pycryptodomex",
  "pydantic",
  "pymp4x",
  "pywidevine@git+https://github.com/ktp420/pywidevine.git@pymp4x"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Myp3a/apple-music-api"
Issues = "https://github.com/Myp3a/apple-music-api/issues"